--- a/istore/client/src/components/Logo.css
+++ b/istore/client/src/components/Logo.css
@@ -1,8 +1,15 @@
-.logo {
+.header {
     width: 100%;
     height: 2.2em;
-    padding: 0.2em 0;
     background-color: #4caf50;
+}
+
+.logo {
+    height: 2.2em;
+    padding-top: 0.2em;
+    padding-bottom: 0.2em;
+    padding-left: 0.5em;
+    float: left;
     text-align: center;
 }
 
@@ -15,7 +22,17 @@
 }
 
 .logo-title {
+    text-transform: uppercase;
     margin-left: 0.2em;
     font-weight: bold;
     color: #fff;
+}
+
+.place {
+    float: right;
+    height: 2.2em;
+}
+
+.place img {
+    width: 1em;
 }
