--- a/istore/client/src/components/StoreDetail.css
+++ b/istore/client/src/components/StoreDetail.css
@@ -112,6 +112,12 @@
   font-weight: bold;
 }
 
+.store-detail-product-body-origin-price {
+  font-size: 1em;
+  text-decoration: line-through;
+  margin-left: 20px;
+}
+
 .store-detail-product-body-price-sale {
   float: right;
   background-color: #fff;
