--- a/istore/client/src/components/ProductDetail.css
+++ b/istore/client/src/components/ProductDetail.css
@@ -2,12 +2,12 @@
   
 }
 
-.store-detail-product-information {
+.product-detail-product-information {
   display: flex;
   flex-direction: row;
 }
 
-.store-detail-product-images {
+.product-detail-product-images {
   width: 390px;
   display: flex;
   flex-direction: column;
@@ -15,91 +15,91 @@
   margin: auto;
 }
 
-.store-detail-product-images-avatar {
+.product-detail-product-images-avatar {
   width: 340px;
   height: 340px;
   overflow: hidden;
   margin: 5px;
 }
 
-.store-detail-product-images-avatar img {
+.product-detail-product-images-avatar img {
   object-fit: cover;
   width: 100%;
   height: 100%;
 }
 
-.store-detail-product-images-more {
+.product-detail-product-images-more {
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
 
-.store-detail-product-images-more div {
+.product-detail-product-images-more div {
   width: 60px;
   height: 60px;
   overflow: hidden;
   margin: 5px;
 }
 
-.store-detail-product-images-more img {
+.product-detail-product-images-more img {
   object-fit: cover;
   width: 100%;
   height: 100%;
 }
 
-.store-detail-product-images-more-icons {
+.product-detail-product-images-more-icons {
   width: 350px;
   position: absolute;
   top: 390px;
 }
 
-.store-detail-product-images-more-icons img {
+.product-detail-product-images-more-icons img {
   height: 1.5em;
 }
 
-.store-detail-product-images-more-icons-previous {
+.product-detail-product-images-more-icons-previous {
   float: left;
 }
 
-.store-detail-product-images-more-icons-next {
+.product-detail-product-images-more-icons-next {
   float: right;
 }
 
-.store-detail-product-body {
+.product-detail-product-body {
   padding: 20px;
 }
 
-.store-detail-product-body-title {
+.product-detail-product-body-title {
   color: red;
 }
 
-.store-detail-product-body-title-sub {
+.product-detail-product-body-title-sub {
   display: flex;
   flex-direction: row;
   margin: 1em auto;
 }
 
-.store-detail-product-body-rate img {
+.product-detail-product-body-rate img {
   height: 1em;
   margin-bottom: 0.5em;
 }
 
-.store-detail-product-body-rate-count,
-.store-detail-product-body-comment-count,
-.store-detail-product-body-count {
+.product-detail-product-body-rate-count,
+.product-detail-product-body-comment-count,
+.product-detail-product-body-count {
   padding: 0 0.5em;
   border-left: 1px solid #999;
   text-decoration: underline;
 }
 
-.store-detail-product-body-rate-title,
-.store-detail-product-body-comment-title,
-.store-detail-product-body-sell-title {
+.product-detail-product-body-rate-title,
+.product-detail-product-body-comment-title,
+.product-detail-product-body-sell-title {
   padding-right: 0.5em;
 }
 
-.store-detail-product-body-price {
+.product-detail-product-body-price {
   background-color: orangered;
   padding-top: 0.5em;
   padding-bottom: 0.5em;
@@ -107,12 +107,12 @@
   color: #fff;
 }
 
-.store-detail-product-body-price-main {
+.product-detail-product-body-price-main {
   font-size: 2em;
   font-weight: bold;
 }
 
-.store-detail-product-body-price-sale {
+.product-detail-product-body-price-sale {
   float: right;
   background-color: #fff;
   color: orangered;
@@ -123,113 +123,113 @@
   margin-right: 1em;
 }
 
-.store-detail-product-body-buy-count {
+.product-detail-product-body-buy-count {
   display: flex;
   flex-direction: row;
   margin-top: 1em;
   margin-bottom: 1em;
 }
 
-.store-detail-product-body-buy-count-body {
+.product-detail-product-body-buy-count-body {
   display: flex;
   flex-direction: row;
 }
 
-.store-detail-product-body-buy-count-header,
-.store-detail-product-body-buy-count-footer {
+.product-detail-product-body-buy-count-header,
+.product-detail-product-body-buy-count-footer {
   padding: 0.5em;
 }
 
-.store-detail-product-body-buy-count-body {
+.product-detail-product-body-buy-count-body {
   padding: 0.5em;
 }
 
-.store-detail-product-body-buy-count-reduction,
-.store-detail-product-body-buy-count-increase {
+.product-detail-product-body-buy-count-reduction,
+.product-detail-product-body-buy-count-increase {
   border: 1px solid #999;
   padding-left: 0.5em;
   padding-right: 0.5em;
   background-color: #f1f1f1;
 }
 
-.store-detail-product-body-buy-count-reduction:hover,
-.store-detail-product-body-buy-count-increase:hover {
+.product-detail-product-body-buy-count-reduction:hover,
+.product-detail-product-body-buy-count-increase:hover {
   cursor: pointer;
 }
 
-.store-detail-product-body-buy-count-number {
+.product-detail-product-body-buy-count-number {
   border: 1px solid #999;
   padding-left: 1em;
   padding-right: 1em;
   background-color: #fff;
 }
 
-.store-detail-product-body-footer {
+.product-detail-product-body-footer {
   display: flex;
   flex-direction: row;
 }
 
-.store-detail-product-body-footer img {
+.product-detail-product-body-footer img {
   height: 1em;
 }
 
-.store-detail-product-body-footer span {
+.product-detail-product-body-footer span {
   margin-left: 0.5em;
 }
 
-.store-detail-product-body-button-buy {
+.product-detail-product-body-button-buy {
   text-align: center;
   font-weight: bold;
 }
 
-.store-detail-product-body-button-buy button {
+.product-detail-product-body-button-buy button {
   font-weight: bold;
 }
 
-.store-detail-info {
+.product-detail-info {
   padding: 20px;
   margin: 0;
 }
 
-.store-detail-info-header {
+.product-detail-info-header {
   display: flex;
   flex-direction: row;
 }
 
-.store-detail-info-avatar {
+.product-detail-info-avatar {
   width: 100px;
   height: 100px;
   overflow: hidden;
   min-width: 100px;
 }
 
-.store-detail-info-avatar img {
+.product-detail-info-avatar img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.store-detail-info-content {
+.product-detail-info-content {
   padding: 1em;
 }
 
-.store-detail-info-content-store-name {
+.product-detail-info-content-store-name {
   color: red;
 }
 
-.store-detail-info-content-store-address {
+.product-detail-info-content-store-address {
 }
 
-.store-detail-info-contact {
+.product-detail-info-contact {
   display: flex;
   flex-direction: row;
 }
 
-.store-detail-info-contact:hover {
+.product-detail-info-contact:hover {
   cursor: pointer;
 }
 
-.store-detail-info-contact-phone {
+.product-detail-info-contact-phone {
   border: 1px solid #34b63b;
   color: #34b63b;
   padding: 0.5em 1em;
@@ -238,20 +238,24 @@
   height: 100%;
 }
 
-.store-detail-info-contact-phone:hover {
+.product-detail-info-contact-phone:hover {
   background-color: #7ccc80;
   color: #fff;
 }
 
-.store-detail-info-contact-phone img {
+.product-detail-info-contact a {
+    height: 100%;
+}
+
+.product-detail-info-contact-phone img {
   height: 1em;
 }
 
-.store-detail-info-contact-phone span {
+.product-detail-info-contact-phone span {
   padding-left: 0.5em;
 }
 
-.store-detail-info-contact-view-shop {
+.product-detail-info-contact-view-shop {
   border: 1px solid #777;
   color: #777;
   padding: 0.5em 1em;
@@ -260,70 +264,70 @@
   height: 100%;
 }
 
-.store-detail-info-contact-view-shop:hover {
+.product-detail-info-contact-view-shop:hover {
   background-color: #777;
   color: #fff;
 }
 
-.store-detail-info-contact-view-shop img {
+.product-detail-info-contact-view-shop img {
   height: 1em;
 }
 
-.store-detail-info-contact-view-shop span {
+.product-detail-info-contact-view-shop span {
   padding-left: 0.5em;
 }
 
-.store-detail-product-description {
+.product-detail-product-description {
   margin: 0;
   padding: 20px;
 }
 
-.store-detail-product-description-title {
+.product-detail-product-description-title {
   color: red;
   margin-bottom: 1em;
 }
 
-.store-detail-product-description-table-header {
+.product-detail-product-description-table-header {
   font-weight: bold;
 }
 
-.store-detail-product-description-table-content {
+.product-detail-product-description-table-content {
 }
 
-.store-detail-products-similar {
+.product-detail-products-similar {
   margin: 0;
   padding: 20px;
 }
 
-.store-detail-products-similar-title {
+.product-detail-products-similar-title {
   margin-bottom: 1em;
 }
 
-.store-detail-products-similar-item-image {
+.product-detail-products-similar-item-image {
   width: 100%;
   height: 130px;
   overflow: hidden;
 }
 
-.store-detail-products-similar-item-image img {
+.product-detail-products-similar-item-image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.store-detail-products-similar-item-title {
+.product-detail-products-similar-item-title {
   height: 3em;
   overflow: hidden;
   text-overflow: clip;
 }
 
-.store-detail-products-similar-item-price {
+.product-detail-products-similar-item-price {
   text-align: right;
   margin-top: 0.5em;
   margin-bottom: 1em;
 }
 
-.store-detail-products-similar-item-price span {
+.product-detail-products-similar-item-price span {
   border-radius: 5px;
   padding: 0.2em 0.5em;
   color: #fff;
