--- a/istore/client/src/components/Field.css
+++ b/istore/client/src/components/Field.css
@@ -56,3 +56,9 @@
 .field-results-list {
     padding: 1em 0;
 }
+
+.loading {
+    display: none;
+    text-align: center;
+    margin-top: 10px;
+}
