--- a/istore/client/src/components/Field_Results_Item.css
+++ b/istore/client/src/components/Field_Results_Item.css
@@ -1,4 +1,14 @@
 .field-results-item {
+    margin: 1em 0;
+    padding-top: 10px;
+}
+
+.field-results-item-content {
+    height: 100px;
+}
+
+.field-results-item-hr {
+    margin: 10px 0 0;
 }
 
 .field-results-item:hover {
@@ -36,8 +46,8 @@
 
 .field-results-item-desc-price {
     border: 1px solid #4caf50;
-    padding: 0 1em;
-    border-radius: 8px;
+    padding: 0.2em 1em;
+    border-radius: 10px;
     background-color: #4caf50;
     color: #fff;
     font-weight: bold;
@@ -47,13 +57,13 @@
 .field-results-item-desc-time-up {
     color: #999;
     float: right;
-    font-size: 0.6em;
-    padding-top: 0.3em;
+    font-size: 0.7em;    
+    padding-top: 0.5em;
 }
 
 .field-results-item-desc-sub-desc {
     color: #333;
-    height: 3em;
+    height: 2.8em;
     overflow: hidden;
     text-overflow: ellipsis;
     font-size: 0.7em;
@@ -74,15 +84,12 @@
 .field-results-item-desc-contact > img {
     width: 0.8em;
     height: 100%;
+    padding-bottom: 0.2em;
 }
 
 .field-results-item-desc-contact > span {
-    padding-left: 0.2em;
+    padding-left: 0.3em;
     font-weight: bold;
     color: #4caf50;
     text-decoration: underline;
-}
-
-.field-results-item-hr {
-    margin-top: 0.5em;
 }
