--- a/istore/client/src/components/Logo.css
+++ b/istore/client/src/components/Logo.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
     width: 100%;
     height: 2.4em;
     background-color: #4caf50;
@@ -35,4 +35,45 @@
 
 .place img {
     width: 1em;
+} */
+
+.header {
+    width: 100%;
+    height: 2.6em;
+    background-color: #4caf50;
+    display: flex;
+    flex-direction: row;
+    padding: 0.2em 0;
+}
+
+.header:hover {
+    cursor: pointer;
+}
+
+.logo {
+    height: 100%;
+    width: 30%;
+    display: flex;
+    align-items: center;
+}
+
+.place {
+    height: 100%;
+    width: 70%;
+}
+
+.logo-image {
+    height: 100%;
+    padding: 0.4em;
+}
+
+.logo-title {
+    font-weight: bold;
+    color: #fff;
+}
+
+.place img {
+    height: 100%;
+    padding: 0.4em 0;
+    margin-right: -0.5em;
 }
