--- a/istore/client/src/components/DropdownUser.css
+++ b/istore/client/src/components/DropdownUser.css
@@ -45,11 +45,25 @@
     padding-left: 0.4em;
 }
 
+.valid-feedback {
+  display: block;
+  width: 100%;
+  margin-top: 0.15rem;
+  font-size: 80%;
+  color: #28a745;
+}
+
+.invalid-feedback {
+  display: none;
+  font-size: 80%;
+  color: #dc3545;
+}
+
 .sign-in:hover {
     background-color: rgb(200, 248, 194);
 }
 
-.sign-up:hover {
+.sign-up:hover span{
     background-color: #34c9eb;
 }
 
