--- a/istore/client/src/components/ProductDetail.css
+++ b/istore/client/src/components/ProductDetail.css
@@ -1,5 +1,5 @@
 .StoreDetail {
-  
+    
 }
 
 .product-detail-product-information {
@@ -47,7 +47,7 @@
   width: 100%;
   height: 100%;
 }
-
+/* 
 .product-detail-product-images-more-icons {
   width: 350px;
   position: absolute;
@@ -64,7 +64,7 @@
 
 .product-detail-product-images-more-icons-next {
   float: right;
-}
+} */
 
 .product-detail-product-body {
   padding: 20px;
@@ -72,6 +72,7 @@
 
 .product-detail-product-body-title {
   color: red;
+  text-transform: uppercase;
 }
 
 .product-detail-product-body-title-sub {
@@ -103,19 +104,19 @@
   background-color: orangered;
   padding-top: 0.5em;
   padding-bottom: 0.5em;
-  padding-left: 1em;
   color: #fff;
 }
 
 .product-detail-product-body-price-main {
   font-size: 2em;
   font-weight: bold;
+  margin-left: 0.5em;
 }
 
 .product-detail-product-body-origin-price {
   font-size: 1em;
   text-decoration: line-through;
-  margin-left: 20px;
+  padding-left: 0.5em;
 }
 
 .product-detail-product-body-price-sale {
@@ -124,8 +125,7 @@
   color: orangered;
   font-weight: bold;
   text-transform: uppercase;
-  padding: 0.2em 1em;
-  margin-top: 0.5em;
+  padding: 0.5em 1em;
   margin-right: 1em;
 }
 
@@ -136,25 +136,14 @@
   margin-bottom: 1em;
 }
 
-.product-detail-product-body-buy-count-body {
-  display: flex;
-  flex-direction: row;
-}
-
-.product-detail-product-body-buy-count-header,
-.product-detail-product-body-buy-count-footer {
-  padding: 0.5em;
-}
-
-.product-detail-product-body-buy-count-body {
-  padding: 0.5em;
+.product-detail-product-body-buy-count > span {
+    margin: 0 0.5em;
 }
 
 .product-detail-product-body-buy-count-reduction,
 .product-detail-product-body-buy-count-increase {
   border: 1px solid #999;
-  padding-left: 0.5em;
-  padding-right: 0.5em;
+  padding: 0.5em;
   background-color: #f1f1f1;
 }
 
@@ -165,14 +154,17 @@
 
 .product-detail-product-body-buy-count-number {
   border: 1px solid #999;
-  padding-left: 1em;
-  padding-right: 1em;
+  padding: 0.5em 1em;
   background-color: #fff;
 }
 
 .product-detail-product-body-footer {
   display: flex;
   flex-direction: row;
+}
+
+.product-detail-product-body-footer div {
+    padding: 0.5em;
 }
 
 .product-detail-product-body-footer img {
@@ -221,9 +213,6 @@
 
 .product-detail-info-content-store-name {
   color: red;
-}
-
-.product-detail-info-content-store-address {
 }
 
 .product-detail-info-contact {
@@ -288,6 +277,10 @@
   padding: 20px;
 }
 
+.product-detail-product-description .row {
+    margin-bottom: 1em !important;
+}
+
 .product-detail-product-description-title {
   color: red;
   margin-bottom: 1em;
@@ -295,9 +288,6 @@
 
 .product-detail-product-description-table-header {
   font-weight: bold;
-}
-
-.product-detail-product-description-table-content {
 }
 
 .product-detail-products-similar {
