--- a/istore/client/src/components/ProductInformation.css
+++ b/istore/client/src/components/ProductInformation.css
@@ -1,41 +1,47 @@
 .store-info {
+  height: 90%;
+  width: 65%;
+  z-index: 500;
+  position: fixed;
+  top: 10%;
+  right: -100%;
+  background-color: #fff;
+  overflow-x: hidden;
+  transition: 0.5s;
+}
+
+@media only screen and (max-width: 768px) {
+  .store-info {
+    height: 100%;
+    width: 85%;
+    top: 6%;
+  }
+}
+
+@media only screen and (min-width: 769px) {
+  .store-info {
     height: 90%;
     width: 65%;
-    z-index: 500;
-    position: fixed;
     top: 10%;
-    right: -100%;
-    background-color: #fff;
-    overflow-x: hidden;
-    transition: 0.5s;
   }
-  
-  @media only screen and (max-width: 768px) {
-    .store-info {
-      height: 100%;
-      width: 85%;
-      top: 6%;
-    }
-  }
-  
-  @media only screen and (min-width: 769px) {
-    .store-info {
-      height: 90%;
-      width: 65%;
-      top: 10%;
-    }
-  }
-  
-  .store-info .closebtn {
-    font-weight: bold;
-    text-decoration: none;
-    color: green;
-    width: 100%;
-    display: block;
-    padding-left: 0.5em;
-    font-size: 2em;
-  }
-  
-  .closebtn img {
-    height: 1em;
-  }
+}
+
+.store-info .closebtn {
+  font-weight: bold;
+  text-decoration: none;
+  color: green;
+  width: 100%;
+  display: block;
+  padding: 0.2em 0.5em;
+  font-size: 2em;
+}
+
+.closebtn img {
+  height: 1.2em;
+}
+
+.fixed-top {
+  position: sticky;
+  left: 0px;
+  top: 0px;
+}
