--- a/istore/client/src/components/e-shop-template/Product.css
+++ b/istore/client/src/components/e-shop-template/Product.css
@@ -1,6 +1,11 @@
 .product-price {
-    font-size: 24px;
+    font-size: 1.3em;
 }
 .product-old-price {
+    font-size: 1em;
     margin-left: 5px;
+}
+
+.product-rating {
+    margin-top: 0;
 }
