--- a/istore/client/src/components/e-shop-template/e-shop/products.html
+++ b/istore/client/src/components/e-shop-template/e-shop/products.html
@@ -105,15 +105,15 @@
 						<li class="header-account dropdown default-dropdown">
 							<div class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true">
 								<div class="header-btns-icon">
-									<i class="fa fa-user-o"></i>
+									<i class="fa fa-user"></i>
 								</div>
 								<strong class="text-uppercase">My Account <i class="fa fa-caret-down"></i></strong>
 							</div>
 							<a href="#" class="text-uppercase">Login</a> / <a href="#" class="text-uppercase">Join</a>
 							<ul class="custom-menu">
-								<li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
-								<li><a href="#"><i class="fa fa-heart-o"></i> My Wishlist</a></li>
-								<li><a href="#"><i class="fa fa-exchange"></i> Compare</a></li>
+								<li><a href="#"><i class="fa fa-user"></i> My Account</a></li>
+								<li><a href="#"><i class="fa fa-heart"></i> My Wishlist</a></li>
+								<li><a href="#"><i class="fa fa-compass"></i> Compare</a></li>
 								<li><a href="#"><i class="fa fa-check"></i> Checkout</a></li>
 								<li><a href="#"><i class="fa fa-unlock-alt"></i> Login</a></li>
 								<li><a href="#"><i class="fa fa-user-plus"></i> Create An Account</a></li>
@@ -760,7 +760,7 @@
 										<h2 class="product-name"><a href="#">Product Name Goes Here</a></h2>
 										<div class="product-btns">
 											<button class="main-btn icon-btn"><i class="fa fa-heart"></i></button>
-											<button class="main-btn icon-btn"><i class="fa fa-exchange"></i></button>
+											<button class="main-btn icon-btn"><i class="fa fa-compass"></i></button>
 											<button class="primary-btn add-to-cart"><i class="fa fa-shopping-cart"></i> Add to Cart</button>
 										</div>
 									</div>
@@ -787,7 +787,7 @@
 										<h2 class="product-name"><a href="#">Product Name Goes Here</a></h2>
 										<div class="product-btns">
 											<button class="main-btn icon-btn"><i class="fa fa-heart"></i></button>
-											<button class="main-btn icon-btn"><i class="fa fa-exchange"></i></button>
+											<button class="main-btn icon-btn"><i class="fa fa-compass"></i></button>
 											<button class="primary-btn add-to-cart"><i class="fa fa-shopping-cart"></i> Add to Cart</button>
 										</div>
 									</div>
@@ -820,7 +820,7 @@
 										<h2 class="product-name"><a href="#">Product Name Goes Here</a></h2>
 										<div class="product-btns">
 											<button class="main-btn icon-btn"><i class="fa fa-heart"></i></button>
-											<button class="main-btn icon-btn"><i class="fa fa-exchange"></i></button>
+											<button class="main-btn icon-btn"><i class="fa fa-compass"></i></button>
 											<button class="primary-btn add-to-cart"><i class="fa fa-shopping-cart"></i> Add to Cart</button>
 										</div>
 									</div>
@@ -852,7 +852,7 @@
 										<h2 class="product-name"><a href="#">Product Name Goes Here</a></h2>
 										<div class="product-btns">
 											<button class="main-btn icon-btn"><i class="fa fa-heart"></i></button>
-											<button class="main-btn icon-btn"><i class="fa fa-exchange"></i></button>
+											<button class="main-btn icon-btn"><i class="fa fa-compass"></i></button>
 											<button class="primary-btn add-to-cart"><i class="fa fa-shopping-cart"></i> Add to Cart</button>
 										</div>
 									</div>
@@ -884,7 +884,7 @@
 										<h2 class="product-name"><a href="#">Product Name Goes Here</a></h2>
 										<div class="product-btns">
 											<button class="main-btn icon-btn"><i class="fa fa-heart"></i></button>
-											<button class="main-btn icon-btn"><i class="fa fa-exchange"></i></button>
+											<button class="main-btn icon-btn"><i class="fa fa-compass"></i></button>
 											<button class="primary-btn add-to-cart"><i class="fa fa-shopping-cart"></i> Add to Cart</button>
 										</div>
 									</div>
@@ -915,7 +915,7 @@
 										<h2 class="product-name"><a href="#">Product Name Goes Here</a></h2>
 										<div class="product-btns">
 											<button class="main-btn icon-btn"><i class="fa fa-heart"></i></button>
-											<button class="main-btn icon-btn"><i class="fa fa-exchange"></i></button>
+											<button class="main-btn icon-btn"><i class="fa fa-compass"></i></button>
 											<button class="primary-btn add-to-cart"><i class="fa fa-shopping-cart"></i> Add to Cart</button>
 										</div>
 									</div>
@@ -948,7 +948,7 @@
 										<h2 class="product-name"><a href="#">Product Name Goes Here</a></h2>
 										<div class="product-btns">
 											<button class="main-btn icon-btn"><i class="fa fa-heart"></i></button>
-											<button class="main-btn icon-btn"><i class="fa fa-exchange"></i></button>
+											<button class="main-btn icon-btn"><i class="fa fa-compass"></i></button>
 											<button class="primary-btn add-to-cart"><i class="fa fa-shopping-cart"></i> Add to Cart</button>
 										</div>
 									</div>
@@ -975,7 +975,7 @@
 										<h2 class="product-name"><a href="#">Product Name Goes Here</a></h2>
 										<div class="product-btns">
 											<button class="main-btn icon-btn"><i class="fa fa-heart"></i></button>
-											<button class="main-btn icon-btn"><i class="fa fa-exchange"></i></button>
+											<button class="main-btn icon-btn"><i class="fa fa-compass"></i></button>
 											<button class="primary-btn add-to-cart"><i class="fa fa-shopping-cart"></i> Add to Cart</button>
 										</div>
 									</div>
@@ -1007,7 +1007,7 @@
 										<h2 class="product-name"><a href="#">Product Name Goes Here</a></h2>
 										<div class="product-btns">
 											<button class="main-btn icon-btn"><i class="fa fa-heart"></i></button>
-											<button class="main-btn icon-btn"><i class="fa fa-exchange"></i></button>
+											<button class="main-btn icon-btn"><i class="fa fa-compass"></i></button>
 											<button class="primary-btn add-to-cart"><i class="fa fa-shopping-cart"></i> Add to Cart</button>
 										</div>
 									</div>
@@ -1150,7 +1150,7 @@
 					<!-- footer copyright -->
 					<div class="footer-copyright">
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+						Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 					</div>
 					<!-- /footer copyright -->
