--- a/istore/client/src/components/HomeIndex.css
+++ b/istore/client/src/components/HomeIndex.css
@@ -67,6 +67,7 @@
     .app-body-left .header {
         position: fixed;
         z-index: 103;
+        width: 100%;
     }
 
     .app-body-left .field {
