--- a/istore/client/src/components/istore/Footer.css
+++ b/istore/client/src/components/istore/Footer.css
@@ -35,8 +35,8 @@
 }
 
 .footer-body {
-    background-color: #4caf50;
-    color: #fff;
+    background-color: #f1f1f1;
+    color: #555;
     padding: 1.5em 1em;
 }
 
