--- a/istore/client/src/components/argon-dashboard-react-master/assets/css/argon-dashboard-react.css
+++ b/istore/client/src/components/argon-dashboard-react-master/assets/css/argon-dashboard-react.css
@@ -5713,7 +5713,8 @@ button.bg-darker:focus {
 
 .mt--7,
 .my--7 {
-  margin-top: -6rem !important; }
+  
+  margin-top: 2rem !important; }
 
 .mr--7,
 .mx--7 {
@@ -6414,7 +6415,8 @@ button.bg-darker:focus {
     margin: -6rem !important; }
   .mt-sm--7,
   .my-sm--7 {
-    margin-top: -6rem !important; }
+    
+    margin-top: 2rem !important; }
   .mr-sm--7,
   .mx-sm--7 {
     margin-right: -6rem !important; }
@@ -6962,7 +6964,8 @@ button.bg-darker:focus {
     margin: -6rem !important; }
   .mt-md--7,
   .my-md--7 {
-    margin-top: -6rem !important; }
+    
+    margin-top: 2rem !important; }
   .mr-md--7,
   .mx-md--7 {
     margin-right: -6rem !important; }
@@ -7510,7 +7513,8 @@ button.bg-darker:focus {
     margin: -6rem !important; }
   .mt-lg--7,
   .my-lg--7 {
-    margin-top: -6rem !important; }
+    
+    margin-top: 2rem !important; }
   .mr-lg--7,
   .mx-lg--7 {
     margin-right: -6rem !important; }
@@ -8058,7 +8062,8 @@ button.bg-darker:focus {
     margin: -6rem !important; }
   .mt-xl--7,
   .my-xl--7 {
-    margin-top: -6rem !important; }
+    
+    margin-top: 2rem !important; }
   .mr-xl--7,
   .mx-xl--7 {
     margin-right: -6rem !important; }
@@ -10222,7 +10227,8 @@ a.btn-icon-only {
 .card-profile-image {
   position: relative; }
   .card-profile-image img {
-    max-width: 180px;
+    min-width: 180px;
+    max-width: 300px;
     border-radius: 0.375rem;
     transform: translate(-50%, -30%);
     position: absolute;
