--- a/istore/client/src/components/argon-dashboard-react-master/assets/scss/custom/_variables.scss
+++ b/istore/client/src/components/argon-dashboard-react-master/assets/scss/custom/_variables.scss
@@ -992,7 +992,8 @@ $datepicker-highlighted-bg: $datepicker-active-background !default;
 // Footer
 
 
-$footer-padding-y:              2.5rem;
+// $footer-padding-y:              2.5rem;
+$footer-padding-y:              0;
 $footer-padding-x:              0;
 
 
