--- a/istore/client/src/components/HomeIndex.css
+++ b/istore/client/src/components/HomeIndex.css
@@ -6,11 +6,14 @@
 }
 
 .app-body-left {
-    width: 30%;
+    width: 40%;
     overflow: auto;
     /* height: 100%; */
     /* overflow-y: auto; */
     position: relative;
+}
+
+.app-body-left.small {
 }
 
 .app-body-left .footer .footer-body {
@@ -18,7 +21,7 @@
 }
 
 .app-body-right {
-    width: 70%;
+    width: 60%;
     /* height: 100%; */
 }
 
