--- a/istore/client/src/components/admin/assets/css/argon-dashboard-react.css
+++ b/istore/client/src/components/admin/assets/css/argon-dashboard-react.css
@@ -14188,7 +14188,8 @@ a.btn-icon-only {
 }
 
 .footer {
-    background: #f7fafc;
+    background: #ffffff;
+    /* background: #ffffff; */
     /* padding: 2.5rem 0; */
 }
 .footer .col-footer .heading {
@@ -14247,7 +14248,7 @@ a.btn-icon-only {
     right: 0;
     top: 600px;
     height: 2000px;
-    background: #f7fafc;
+    background: #ffffff;
     transform: skew(0, -8deg);
 }
 .footer.has-cards .container {
