--- a/istore/client/src/components/user/assets/scss/custom/_variables.scss
+++ b/istore/client/src/components/user/assets/scss/custom/_variables.scss
@@ -998,7 +998,7 @@ $footer-padding-x:              0;
 
 
 $footer-link-font-size: .85rem !default;
-$footer-bg: theme-color("secondary") !default;
+$footer-bg: $white !default;
 $footer-color: $gray-600 !default;
 $footer-link-color: $gray-600 !default;
 $footer-link-hover-color: $gray-700 !default;
