--- a/istore/client/src/components/admin/assets/css/argon-dashboard-react.css
+++ b/istore/client/src/components/admin/assets/css/argon-dashboard-react.css
@@ -14188,7 +14188,7 @@ a.btn-icon-only {
 }
 
 .footer {
-    background: #ffffff;
+    /* background: #ffffff; */
     /* background: #ffffff; */
     /* padding: 2.5rem 0; */
 }
