--- a/istore/client/src/components/istore/Field_Results_Item.css
+++ b/istore/client/src/components/istore/Field_Results_Item.css
@@ -5,6 +5,11 @@
 
 .field-results-item-content {
     height: 120px;
+    padding-right: 10px;
+}
+
+.field-results-item-content:hover {
+    background-color: #cbffd8;
 }
 
 .field-results-item-hr {
@@ -37,7 +42,15 @@
     color: #b40e0e;
     font-weight: bold;
     text-transform: uppercase;
-    text-decoration: underline;
+    padding-top: 5px;
+    margin-bottom: 5px;
+    overflow: hidden;
+    text-overflow: clip;
+    height: 1.6em;
+}
+
+.field-results-item-desc-area-price {
+    margin-bottom: 5px;
 }
 
 .field-results-item-desc-price {
@@ -58,11 +71,19 @@
 
 .field-results-item-desc-sub-desc {
     color: #333;
+    margin-bottom: 5px;
+    overflow: hidden;
+    text-overflow: clip;
+    height: 1.5em;
+}
+
+.field-results-item-desc-product-description {
     font-size: 0.8em;
+    color: #777777;
 }
 
 .field-results-item-desc-rate-contact{
-    padding-top: 0.2em;
+    
 }
 
 .field-results-item-desc-rate > img {
@@ -78,7 +99,7 @@
     color: #4caf50;
     border: 1px solid #4caf50;
     border-radius: 10px;
-    padding: 0.2em 0.5em;
+    padding: 4px 8px;
 }
 
 .field-results-item-desc-contact img {
@@ -89,6 +110,25 @@
 
 .field-results-item-desc-contact a:hover {
     color: #fff;
-    background-color: orangered;
-    border: 1px solid orangered;
+    background-color: rgb(255, 133, 103);
+    border: 1px solid rgb(255, 133, 103);
+}
+
+.field-results-item .icons {
+    background: #ff0000;
+    color: #fff;
+    position: absolute;
+    left: -36px;
+    top: -12px;
+    padding: 20px 30px 3px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 0.8em;
+    -moz-transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    box-shadow: 0 1px 5px #cccccc;
+    border-radius: 0;
 }
